# eggplant_game

./: Cargo.toml  index.html
.cargo/: config
assets/animation/: 01.frame_anim.ron  player01_ske.json  player01_tex.json
assets/models/: u01.glb
assets/textures/bg/: bg_ui.png~
src/: lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/frame_animation/: dragon_loader.rs  dragon_models.rs  mod.rs  ron_loader.rs
